# ChatGPT-ArXiv

./: .replit  CMakeLists.txt  compile_commands.json
c/: CMakeLists.txt  arrangeab.c  binarydelete2.c  binarydeletebug.c  binarydeletefix.c  binarydeletefix2.c  binarysearch01.c  bitand.c  countletters.c  debug01.c  debug02-rewrite.c  debug02-rewriteb.c  debug02.c  fgets.c  linkedlist2.c  linkedlist3.c  linkedlist4.c  linkedlist5.c  mallocfail.c  mallocleak.c  mallocleak2.c  mallocleak3.c  mallocleak4.c  memory0.c  memory0.md  memory1.c  memory1.md  memory2.c  orderbrackets.c  pairs.c  partition3.c  partition5.c  partition6.c  pascal1.c  readsortthird.c  readsortthird2.c  sizeof.c
java/: divide01.java  divide02.java  divide03.java  divide04.java  divide05.java
memory-safety/: memory0.c  memory1.c  memory2.md
python/: binarydelete.py  partition1.py
