
add_executable (memory0 memory0.c)
add_executable (memory1 memory1.c)
add_executable (memory2 memory2.c)
add_executable (arrangeab arrangeab.c)
add_executable (binarydelete2 binarydelete2.c)
add_executable (binarydeletebug binarydeletebug.c)
add_executable (binarydeletefix binarydeletefix.c)
add_executable (binarydeletefix2 binarydeletefix2.c)
add_executable (binarysearch01 binarysearch01.c)
add_executable (bitand bitand.c)
add_executable (countletters countletters.c)
add_executable (debug01 debug01.c)
add_executable (debug02-rewrite debug02-rewrite.c)
add_executable (debug02-rewriteb debug02-rewriteb.c)
add_executable (debug02 debug02.c)
add_executable (fgets fgets.c)
add_executable (linkedlist1 linkedlist1.c)
add_executable (linkedlist2 linkedlist2.c)
add_executable (linkedlist3 linkedlist3.c)
add_executable (linkedlist4 linkedlist4.c)
add_executable (linkedlist5 linkedlist5.c)
add_executable (mallocfail mallocfail.c)
add_executable (mallocleak mallocleak.c)
add_executable (mallocleak2 mallocleak2.c)
add_executable (mallocleak3 mallocleak3.c)
add_executable (mallocleak4 mallocleak4.c)
add_executable (orderbrackets orderbrackets.c)
add_executable (pairs pairs.c)
add_executable (partition3 partition3.c)
add_executable (partition5 partition5.c)
add_executable (partition6 partition6.c)
add_executable (pascal1 pascal1.c)
add_executable (readsortthird readsortthird.c)
add_executable (readsortthird2 readsortthird2.c)
add_executable (sizeof sizeof.c)
